<resources>
    <string name="app_name">ActualizaDatos</string>
    <string name="nombre">Nombre Completo</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="siguiente">Siguiente</string>
    <string name="descripcion_contacto">Descripcion Contacto</string>
    <string name="confirmar_datos">Confirmar Datos</string>
    <string name="editar_datos">Editar Datos</string>
</resources>
